--- a/O2S_QuanLyHocVien.BusinessLogic/O2S_QuanLyHocVien.BusinessLogic.csproj
+++ b/O2S_QuanLyHocVien.BusinessLogic/O2S_QuanLyHocVien.BusinessLogic.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="Filter\BangDiemFilter.cs" />
     <Compile Include="Filter\CauHinhEmailFilter.cs" />
+    <Compile Include="Filter\DotHocFilter.cs" />
     <Compile Include="Filter\PhongHocFilter.cs" />
     <Compile Include="Filter\CaHocFilter.cs" />
     <Compile Include="Filter\HoaDonThuChiFilter.cs" />
@@ -94,6 +95,7 @@
     <Compile Include="KeySetting.cs" />
     <Compile Include="Logic\BangDiemLogic.cs" />
     <Compile Include="Logic\CauHinhEmailLogic.cs" />
+    <Compile Include="Logic\DotHocLogic.cs" />
     <Compile Include="Logic\PhongHocLogic.cs" />
     <Compile Include="Logic\HocPhiHocVienLogic.cs" />
     <Compile Include="Logic\ChucNangLogic.cs" />
@@ -123,6 +125,7 @@
     <Compile Include="Model\GiangDay_PlusDTO.cs" />
     <Compile Include="Model\HoaDonThuChi_PlusDTO.cs" />
     <Compile Include="Model\LichSuTuVan_PlusDTO.cs" />
+    <Compile Include="Model\DotHoc_PlusDTO.cs" />
     <Compile Include="Model\PhanQuyenTaiKhoan_PlusDTO.cs" />
     <Compile Include="Model\QuanLyHocVienDTO.cs" />
     <Compile Include="Model\KhoaHoc_MonHoc_PlusDTO.cs" />
