--- a/O2S_QuanLyHocVien/O2S_QuanLyHocVien.csproj
+++ b/O2S_QuanLyHocVien/O2S_QuanLyHocVien.csproj
@@ -238,6 +238,18 @@
     <Compile Include="GUI\ChucNang\frmLapPhieuGhiDanh_Option1.Designer.cs">
       <DependentUpon>frmLapPhieuGhiDanh_Option1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ChucNang\frmQuanLyHocPhi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ChucNang\frmQuanLyHocPhi.Designer.cs">
+      <DependentUpon>frmQuanLyHocPhi.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ChucNang\frmQuanLyHocPhi_Option1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ChucNang\frmQuanLyHocPhi_Option1.Designer.cs">
+      <DependentUpon>frmQuanLyHocPhi_Option1.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\ChucNang\frmQuanLyHocVienChoLop.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -351,12 +363,6 @@
     </Compile>
     <Compile Include="GUI\ChucNang\frmQuanLyDiem.Designer.cs">
       <DependentUpon>frmQuanLyDiem.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GUI\ChucNang\frmQuanLyHocPhi.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUI\ChucNang\frmQuanLyHocPhi.Designer.cs">
-      <DependentUpon>frmQuanLyHocPhi.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\ChucNang\frmQuanLyHocVien.cs">
       <SubType>Form</SubType>
@@ -543,6 +549,12 @@
     <EmbeddedResource Include="GUI\ChucNang\frmLapPhieuGhiDanh_Option1.resx">
       <DependentUpon>frmLapPhieuGhiDanh_Option1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ChucNang\frmQuanLyHocPhi.resx">
+      <DependentUpon>frmQuanLyHocPhi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ChucNang\frmQuanLyHocPhi_Option1.resx">
+      <DependentUpon>frmQuanLyHocPhi_Option1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChucNang\frmQuanLyHocVienChoLop.resx">
       <DependentUpon>frmQuanLyHocVienChoLop.cs</DependentUpon>
     </EmbeddedResource>
@@ -599,9 +611,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChucNang\frmQuanLyDiem.resx">
       <DependentUpon>frmQuanLyDiem.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="GUI\ChucNang\frmQuanLyHocPhi.resx">
-      <DependentUpon>frmQuanLyHocPhi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ChucNang\frmQuanLyHocVien.resx">
       <DependentUpon>frmQuanLyHocVien.cs</DependentUpon>
