--- a/O2S_QuanLyHocVien.DataAccess/O2S_QuanLyHocVien.DataAccess.csproj
+++ b/O2S_QuanLyHocVien.DataAccess/O2S_QuanLyHocVien.DataAccess.csproj
@@ -33,8 +33,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="O2S_Common">
-      <HintPath>..\..\..\..\1_Library\Lib_Debug\O2S_Common.dll</HintPath>
+    <Reference Include="O2S_Common, Version=1.0.0.5, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\1_Library\Lib_Debug\O2S_Common.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Private>True</Private>
